...
                    
                    Button(action: { showRegistrationView = true }) {
                        Text("Rejestracja")
                        Image(systemName: "person.badge.plus")
                    }
                } label: {
                    Image(systemName: "ellipsis")
                        .padding()
                        .accessibilityLabel("Więcej opcji")
                        .accessibility(identifier: "ellipsis")
                }
            )
            .fullScreenCover(isPresented: $showLoginView) {
...
